<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>1.0.0</version>
  <description>Implementation of a user-friendly control panel to manage the robot movements</description>

  <maintainer email="lucamarchionna97@gmail.com">Luca Marchionna</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>edo_core_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>edo_core_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>visp_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>edo_core_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>visp_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
